# OpenGlTest

./: CMakeLists.txt
include/: camera.h  shader.h
src/: camera.c  glad.c  main.c  shader.c
